<resources>
    <string name="app_name">StrykerOSS</string>
    <string name="install">Install </string>
    <string name="install2">Core loading </string>
    <string name="install3">Installing the Core </string>
    <string name="fail">Download failed, please check your internet connection </string>
    <string name="install_unpack">Unpacking the Core </string>
    <string name="local_scan">Scanning the local network may take some time, but the result will be 💣! </string>
    <string name="no_results">No results found </string>
    <string name="ew_welcome">Welcome to the Add Exploit Wizard, please follow all the instructions and follow all the steps to successfully add. Click the "Continue" button to proceed to the next step. </string>
    <string name="ew_path">(/sdcard/Stryker/exploits/) </string>
    <string name="select">Path to exploit: click to select </string>
    <string name="no_pattern">Attention, the application could not find such a line in the file. This may be due to a feature of the script or obfuscation. Are you sure you entered everything correctly? </string>
    <string name="warn">Warning </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exploits">In the exploits section, you can add your own exploits and scripts, and then use them for their intended purpose. Automatic parameter detection supported </string>
    <string name="scanners">Here you can create or edit ready-made vulnerability scanners. You can combine protocol exploits to launch with one click. </string>
    <string name="exploits_title">Exploits </string>
    <string name="scanners_title">Scanners </string>
    <string name="tutorials">textbooks </string>
    <string name="add">Add </string>
    <string name="run">launch </string>
    <string name="exs">Exploits… </string>
    <string name="bit">Unfortunately, your device is 32-bit and does not support the required library! Please try other features of the app! </string>
    <string name="usb">USB device connected </string>
    <string name="customvalue">Enter custom value </string>
    <string name="wifi">WiFi Networks </string>
    <string name="dashboard">Home </string>
    <string name="wifi_networks">WiFi Networks </string>
    <string name="local_network">Local network </string>
    <string name="handshakes">Handshakes </string>
    <string name="exploit_hub">Exploits </string>
    <string name="core_manager">Manager </string>
    <string name="check_camera">Check RTSP for vulnerabilities </string>
    <string name="run_custom">Run custom exploit </string>
    <string name="nmap">Nmap Scanner </string>
    <string name="scanning_wifi">Scanning Wi-Fi networks </string>
    <string name="delcache">Removing cache… </string>
    <string name="download_apk">Loading app… </string>
    <string name="download_chroot">Loading chroot… </string>
    <string name="unmount">Unmounting the Core… </string>
    <string name="delchroot">Removing the old chroot… </string>
    <string name="installchroot">Installing a new chroot </string>
    <string name="installapk">Please install the requested apk! </string>
    <string name="failed_try">Didn\'t work, try again! </string>
    <string name="get_exploitfile">Select script from files </string>
    <string name="path">Path: </string>
    <string name="please_file">Please choose a file! </string>
    <string name="pass_founded">Password found: </string>
    <string name="select_word">Choose a dictionary </string>
    <string name="pass_not_found">Password not found </string>
    <string name="error_upload">File upload error! </string>
    <string name="file_was_uploaded">The file has already been uploaded before! </string>
    <string name="upload_success">The file has been successfully uploaded, please check your mail! </string>
    <string name="please_connect">Please connect to the network first! </string>
    <string name="saved_to">The results are saved in routerscan.csv! </string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="scan_finised">Scan completed! </string>
    <string name="scan_finished_desc">Scan completed! You can save the result with the icon at the top! </string>
    <string name="rs_notif_channel">Router scan</string>
    <string name="rs_notif_title">Router scan running</string>
    <string name="rs_notif_progress">%1$d%% · %2$d hosts · %3$d cracked</string>
    <string name="rs_notif_done_title">Router scan finished</string>
    <string name="rs_notif_done_text">%1$d of %2$d responsive hosts cracked</string>
    <string name="rs_status_scanning">Scanning…</string>
    <string name="rs_status_cracked">Cracked</string>
    <string name="rs_status_done">No match</string>
    <string name="save">Save </string>
    <string name="saved_to_exp">Saved to exploits! </string>
    <string name="trying">Trying: </string>
    <string name="succes">Success! </string>
    <string name="cant_find_netw">Sorry, I couldn\'t find the network. Swipe down to try again </string>
    <string name="select_word2">Choose a dictionary </string>
    <string name="pass">Password: </string>
    <string name="not_vuln_pixie">The network is not vulnerable or the signal is too weak </string>
    <string name="plata">Board: </string>
    <string name="pick">Choose an interface </string>
    <string name="exploit_wizard">Exploit Wizard </string>
    <string name="exploit_wizard_step_1_of_2">Exploit Wizard (Step 1 of 2) </string>
    <string name="arguments">Arguments </string>
    <string name="allowed_shortcuts_n_ip_ip_address_n_port_port_n_gw_gateway_n_mask_subnet_mask_n_mac_mac_address_n_ncustom_shortcuts_n_customtext_app_will_ask_you_to_enter_variable_manually">Allowed shortcuts:\n{IP} - IP address\n{PORT} - port\n{GW} - gateway\n{MASK} - subnet mask\n{MAC} - MAC address\n\nCustom shortcuts:\n{CUSTOMTEXT} - the application will ask you to enter the variable manually </string>
    <string name="example_n_myexploit_t_ip_p_port_threads_n_n_n_n_works_as_customtext_and_you_will_be_able_to_enter_it_before_scan_starts">Example:\n./myexploit -t {IP} -p {PORT} --threads {N}\n\n{N} works like {CUSTOMTEXT} and you can enter it before the scan starts! </string>
    <string name="exploit_wizard_step_2_of_2">Exploit Wizard (Step 2 of 2) </string>
    <string name="title">Title </string>
    <string name="successful_pattern">successful pattern </string>
    <string name="how_it_works_nenter_message_or_part_of_it_which_script_displays_on_success_result_if_no_msg_found_result_marked_as_failed">How does it work?\nEnter the message (or part of it) that the script will display on success. If the message is not found, the result is marked as failed! </string>
    <string name="example_n_exploit_successful_marked_as_good_result_nif_no_such_msg_failed">Example:\n[vuln] Target vulnreable - flagged as a good result.\nIf there is no such message, an error </string>
    <string name="error_mount">Mount error! Make sure you have the Stryker folder! </string>
    <string name="exploit_list">List of exploits </string>
    <string name="enter_mac">Enter MAC address </string>
    <string name="captured_be_here">Caught handshakes will be here! </string>
    <string name="detect_os">Detect OS </string>
    <string name="detect_services">Service discovery </string>
    <string name="fast_scan_less_ports">Fast scan (fewer ports) </string>
    <string name="mark_host_s_as_online">Mark host(s) as online </string>
    <string name="set_ranges">Set Ranges </string>
    <string name="ranges_and_ips">Ranges and IP </string>
    <string name="router_scan_settings">Router Scan Settings </string>
    <string name="set_max_threads">Set the maximum number of threads </string>
    <string name="set_timeout_ms">Set timeout (ms) </string>
    <string name="initializing">Initialization… </string>
    <string name="q">Enter a request </string>
    <string name="enter_pin">Enter pin </string>
    <string name="cancel">Cancel </string>
    <string name="auto_connect">AUTO-CONNECT </string>
    <string name="not_vuln_local">Sorry, target not vulnerable </string>
    <string name="vuln_for">Target vulnerable for: </string>
    <string name="rs">Router Scan </string>
    <string name="start_core">Starting core... </string>
    <string name="failed_info">Failed to get information </string>
    <string name="coose_port">Choose port </string>
    <string name="webauth">WebAuth - </string>
    <string name="ssid" translatable="false">"\nSSID - " </string>
    <string name="psk">"\nPSK - " </string>
    <string name="wps" translatable="false">"\nWPS - " </string>
    <string name="choose_opt">Choose option </string>
    <string name="cut_dev">Cut device </string>
    <string name="perm_cut">Permanent cut </string>
    <string name="cut20">Cut for 20 seconds </string>
    <string name="piin">"\nPin: " </string>
    <string name="website">Web\nscanner </string>
    <string name="try_again">Try again</string>
    <string name="userhello">👋 Welcome back, </string>
    <string name="ip_ranges">IP ranges</string>
    <string name="ports">Ports</string>
    <string name="fill_rs">Please, fill all fields!</string>
    <string name="magisk_off_success">Success!</string>
    <string name="magisk_notif_bad">Failed</string>
    <string name="open_link_error">No installed app can open this link.</string>
    <string name="permissions_is_not_granted">"Permissions isn't granted!"</string>
    <string name="permissions_check_again">Check permission again.</string>
    <string name="device_is_not_supported">Your device isn\'t supported.</string>
    <string name="support_only_64bit">Stryker is only supported on 64-bit devices. Do not use 🦖!</string>
    <string name="notification_channel_updater">Updater</string>
    <string name="settings_delete_confirm_title">Delete Stryker?</string>
    <string name="settings_delete_confirm_message">All your data, saved networks, exploits and settings will be erased. This cannot be undone.</string>
    <string name="hid_layout_pick">Pick layout</string>
    <string name="hid_clear">Clear</string>
    <string name="hid_import">Import</string>
    <string name="hid_export">Export</string>
    <string name="hid_save_to_library">Save to library</string>
    <string name="ide_caps_title">Capabilities</string>
    <string name="ide_rename">Rename file</string>
    <string name="arsenal_new_profile">New profile</string>
    <string name="arsenal_field_name">Profile name</string>
    <string name="arsenal_field_target_os">Target OS</string>
    <string name="arsenal_field_vid">USB Vendor ID (0xVVVV)</string>
    <string name="arsenal_field_pid">USB Product ID (0xPPPP)</string>
    <string name="arsenal_field_manufacturer">Manufacturer</string>
    <string name="arsenal_field_product">Product</string>
    <string name="arsenal_field_serial">Serial number</string>
    <string name="arsenal_functions_label">Functions</string>
    <string name="arsenal_function_hid_kbd">HID Keyboard</string>
    <string name="arsenal_function_hid_mouse">HID Mouse</string>
    <string name="arsenal_function_mass">Mass Storage</string>
    <string name="arsenal_function_rndis">RNDIS</string>
    <string name="arsenal_function_ecm">ECM</string>
    <string name="arsenal_function_acm">Serial (ACM)</string>
    <string name="arsenal_mass_label">Mass-storage image</string>
    <string name="arsenal_mass_pick">Pick .img / .iso</string>
    <string name="arsenal_mass_readonly">Read-only</string>
    <string name="arsenal_mass_cdrom">Emulate CD-ROM</string>
    <string name="arsenal_save">Save</string>
    <string name="arsenal_cancel">Cancel</string>
    <string name="delete_app_confirm_cta">Delete everything</string>
    <string name="delete_app_item_chroot">•  Chroot environment &amp; all installed tools</string>
    <string name="delete_app_item_data">•  App data, settings &amp; saved results</string>
    <string name="delete_app_item_app">•  Stryker itself</string>
</resources>